# EXR-Tool

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: build.yml  package.yml
apps/exrtool-gui/src-tauri/: Cargo.toml  build.rs  config.json  linear_to_srgb.cube  tauri.conf.json
apps/exrtool-gui/src-tauri/src/: main.rs
apps/exrtool-gui/web/: index.html  index.js  style.css
config/: luts.presets.json  transforms.json
crates/exrtool-cli/: Cargo.toml
crates/exrtool-cli/src/: main.rs
crates/exrtool-core/: Cargo.toml  build.rs
crates/exrtool-core/benches/: lut_gen.rs  make_3d_lut.rs
crates/exrtool-core/ffi/: ocio_c_api.cpp  ocio_c_api.h
crates/exrtool-core/src/: lib.rs  metadata.rs  ocio.rs  rules.rs  save.rs
crates/exrtool-core/tests/: gamma.rs  lut.rs  matrix.rs
docs/: BOOTSTRAP.md  GUI_GUIDE.md  LUT.md  PRIVACY.md  SIGNING.md  TASKS.md  rules.yml
docs/img/: README.md
log/: 2025-09-12-notes.md  2025-09-13-notes.md  2025-09-14-notes.md  PROCESS.md
scripts/: bootstrap_windows.ps1  ci_local.ps1  merge_assist.ps1  package_linux.sh  package_macos.sh  package_windows.ps1  precommit_pii.ps1
uiUpdate/: ModernUIMockup.html  UIUX_DesignDocumentForExrTool.md
